<resources>
    <string name="app_name">ConstraintLayout Examples</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris id neque interdum, ultrices mi et, feugiat velit. In at cursus nulla. Nam at faucibus nisi. Morbi purus nisl, venenatis eu arcu vitae, ullamcorper lacinia felis. Vestibulum dapibus velit quis ornare mattis. Etiam sapien mi, finibus vestibulum massa non, feugiat pulvinar quam. Vestibulum luctus ligula sed massa efficitur, eu auctor lectus venenatis. Vestibulum auctor erat sit amet orci pharetra, eget sodales velit laoreet. In interdum, est sit amet euismod tempus, nulla velit egestas mauris, a lacinia lacus neque sagittis ligula. Sed ac fermentum neque, ut hendrerit massa. Quisque lorem urna, blandit id nisl vitae, facilisis ultricies quam. Aliquam sit amet justo sem. In hac habitasse platea dictumst.  Ut vitae enim quis mi aliquam congue. Vestibulum neque lorem, consectetur sit amet ligula id, volutpat fermentum sapien. Donec non consequat justo. Praesent in sapien ultricies, convallis ipsum et, efficitur sapien. Suspendisse bibendum dui lorem, sed elementum dui gravida id. Praesent mattis dui ac venenatis hendrerit. Aliquam ipsum mauris, dictum scelerisque erat nec, dapibus semper nisi. Integer egestas porttitor aliquet. Curabitur hendrerit gravida nisl sit amet mattis. Pellentesque malesuada ligula quis turpis maximus lacinia. Sed vitae malesuada eros. Suspendisse pharetra metus at blandit lobortis. Vivamus risus lacus, maximus at urna a, facilisis commodo mi.  Sed rhoncus tincidunt malesuada. Curabitur quis sollicitudin quam. Duis dapibus vel nibh non pretium. Vestibulum tortor turpis, posuere sit amet facilisis sed, accumsan quis nisi. Nunc volutpat sit amet risus eget molestie. Nam in consectetur ante, quis rhoncus tellus. Phasellus feugiat et ipsum eget maximus. Aliquam a tristique purus. Fusce eget tempor libero.  Nulla euismod massa sit amet eros mattis, sit amet elementum velit malesuada. Quisque mattis faucibus nisi sed faucibus. In et tortor mollis, rhoncus lorem non, viverra libero. Sed non velit facilisis, varius dui sed, eleifend magna. Vestibulum tempor nibh nec neque gravida placerat. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Donec vel viverra tellus. Sed cursus cursus nisl a vehicula.  Nam id ligula tincidunt, interdum nunc eget, vestibulum augue. Fusce magna nisl, interdum at purus in, sagittis consectetur nisi. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis rhoncus sem turpis, nec elementum sapien semper eget. Pellentesque faucibus vestibulum lectus, quis aliquet massa. Sed nibh diam, gravida fringilla turpis in, molestie feugiat nulla. Interdum et malesuada fames ac ante ipsum primis in faucibus. Proin eu condimentum orci, in rhoncus nunc. Praesent porttitor ultrices sapien ac sagittis. Donec vitae nisi nisi. Aenean lobortis scelerisque pharetra. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae;</string>

    <!-- taken from https://github.com/googlecodelabs/constraint-layout -->
    <string name="dummy">dummy</string>
    <string name="discard">Discard</string>
    <string name="upload">Upload</string>
    <string name="camera_settings">ƒ/4 16s ISO 200</string>
    <string name="settings">Settings</string>
    <string name="camera">Camera</string>
    <string name="camera_value">Leica M Typ 240</string>
    <string name="singapore">Singapore</string>
    <string name="singapore_description">Singapore officially the Republic of Singapore, and often referred to as the Lion City, the Garden City, and the Red Dot, is a global city in Southeast Asia and the world\'s only island city-state. It lies one degree (137 km) north of the equator, at the southernmost tip of continental Asia and peninsular Malaysia, with Indonesia\'s Riau Islands to the south. Singapore\'s territory consists of the diamond-shaped main island and 62 islets.</string>
</resources>
