<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main_inference"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_editor_absoluteX="0dp"
    app:layout_editor_absoluteY="80dp"
    tools:layout_editor_absoluteX="0dp"
    tools:layout_editor_absoluteY="80dp">

    <ImageView
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="125dp"
        android:layout_marginBottom="15dp"
        android:contentDescription="@string/dummy"
        android:scaleType="centerCrop"
        android:src="@drawable/singapore" />

    <ImageView
        android:id="@+id/favorite"
        android:layout_width="36dp"
        android:layout_height="36dp"
        android:layout_alignParentRight="true"
        android:layout_below="@id/header"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="-36dp"
        android:background="@drawable/info_background"
        android:contentDescription="@string/dummy"
        android:padding="5dp"
        android:src="@drawable/ic_star" />

    <TextView
        android:id="@+id/subtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/header"
        android:layout_marginStart="16dp"
        android:layout_marginTop="35dp"
        android:elevation="19dp"
        android:text="@string/singapore"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@id/cameraEdit"
        android:layout_marginStart="16dp"
        android:labelFor="@+id/cameraEdit"
        android:text="@string/camera" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@id/settingsEdit"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:labelFor="@+id/settingsEdit"
        android:text="@string/settings"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="@+id/settingsEdit"
        app:layout_editor_absoluteX="16dp"
        app:layout_editor_absoluteY="256dp"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintTop_creator="1" />

    <EditText
        android:id="@+id/cameraEdit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/subtitle"
        android:layout_marginEnd="65dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="7dp"
        android:layout_toRightOf="@id/textView"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/camera_value" />

    <EditText
        android:id="@+id/settingsEdit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/cameraEdit"
        android:layout_below="@+id/cameraEdit"
        android:layout_marginTop="11dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/camera_settings" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="11dp"
        android:layout_marginEnd="19dp"
        android:text="@string/upload" />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="11dp"
        android:layout_marginEnd="16dp"
        android:layout_toLeftOf="@id/button"
        android:text="@string/discard" />

    <TextView
        android:id="@+id/descriptionTextView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:layout_below="@id/settingsEdit"
        android:layout_above="@id/button2"
        android:text="@string/singapore_description"
        />

</RelativeLayout>